--- a/src/App.css
+++ b/src/App.css
@@ -111,9 +111,21 @@ form > div{
   color: #ffffff;
   font-weight: 500;
 }
-.movie-title > span{
+.Trending{
   color: #ffffff;
   background-color: #F03A17;
+  padding: 2px 10px;
+  border-radius: 50px;
+}
+.Popular{
+  color: #FFDE09;
+  border: 1px solid #FFDE09;
+  padding: 2px 10px;
+  border-radius: 50px;
+}
+.Suggestion{
+  color: #F03A17;
+  border: 1px solid #F03A17;
   padding: 2px 10px;
   border-radius: 50px;
 }
@@ -337,4 +349,14 @@ form > div{
 .show-more-actors > a > img{
   max-width: 100%;
   border-radius: 5px;
+}
+
+/* Movie suggestion */
+.movie-suggestions{
+  display: flex;
+  flex-wrap: wrap;
+}
+.movie-suggestions > div{
+  margin:10px;
+  flex: 0 18%;
 }
