--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,10 @@ body{
 }
 
 /* SearchMovie */
+.choose-text{
+  color: #828283;
+  margin-top: 5%;
+}
 form > div{
   display: flex;
 }
@@ -171,6 +175,9 @@ form > div{
 }
 
 /* Movie details */
+.mt-10{
+  margin-top: 10%;
+}
 .movie-details-wrapper{
   margin: 100px 0px;
 }
@@ -185,23 +192,10 @@ form > div{
   margin-top: -40px;
   margin-left: 50px;
 }
-.title{
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 .title > h3{
   color: #ffffff;
   font-weight: 600;
   font-size: 40px;
-}
-.title > span{
-  margin-left: 50px;
-  color: #ffffff;
-  background-color: #F03A17;
-  padding: 2px 10px;
-  border-radius: 50px;
 }
 .selected-movie-overview > .movie-detail{
   color: #828283;
@@ -214,15 +208,60 @@ form > div{
   display: flex;
   justify-content: space-between;
 }
+.movie-credits > h1{
+  color: #fff;
+}
+.genres-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+}
+.genres-wrapper > div > span{
+  margin-right: 10px;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 5px 10px;
+  border-radius: 10px;
+}
+#downloads {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+#downloads td, #downloads th {
+  border: 1px solid #828283;
+  padding: 20px;
+}
+#downloads th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: transparent;
+  color: white;
+}
+.download-links{
+  color: #828283;
+}
 .watch-movie{
   background-color: #F03A17;
   color: #ffffff;
+  text-decoration: none;
   outline: none;
   border:none;
   border-radius:10px;
   width: 50%;
-  padding: 20px;
+  padding: 10px 20px;
+  margin-right: 20px;
   cursor: pointer;
+  transition: 0.3s;
+}
+.watch-movie:hover{
+  color: #F03A17;
+  border: 1px solid #F03A17;
+  background-color: transparent;
+}
+.trailer-err > a{
+  color: #F03A17;
+  text-decoration: none;
 }
 .trailer-wrapper{
   color: #fff;
@@ -235,8 +274,12 @@ form > div{
   margin-top: 5%;
   color: #fff;
 }
-.movie-credits > h1{
-  color: #fff;
+.current-genre-recommendation-wrapper > h1 >span{
+  color: #F03A17;
+}
+.similar-movies{
+  display: flex;
+  justify-content: space-between;
 }
 
 /* Contact us */
@@ -350,14 +393,39 @@ form > div{
   text-align: center;
   font-weight: 500;
 }
-.popular-actors-wrapper div div > .rec.rec-arrow {
-  background-color: transparent;
+.popular-actors-wrapper{
+  display: flex;
+  justify-content: space-between;
+}
+.popular-actor{
+  flex: 0 20%;
+  border-radius:5px;
+  padding: 10px;
   border: 1px solid #fff;
+}
+.character{
+  line-height: 10px;
+}
+.character-name{
+  color: #fff;  
+}
+.character > .actor-name{
   color: #fff;
 }
-.show-more-actors > a > img{
-  max-width: 100%;
-  border-radius: 5px;
+.character > .character-name{
+  font-weight: 100;
+  color: #fff;
+}
+.character > p > span{
+  font-weight: 500;
+  color: #F03A17;
+}
+.error-casters{
+  color: #fff;
+  font-weight: 500;
+}
+.error-casters > span{
+  color: #F03A17;
 }
 
 /* Movie suggestion */
@@ -421,13 +489,3 @@ form > div{
 }
 
 /* Movie credits */
-.actor{
-  color: #fff;
-}
-.character-text{
-  color: #828283;
-}
-.character-name{
-  margin-top: -15px;
-  color: #fff;
-}
