--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,3 +6,36 @@ body{
 .App{
   margin: 3% 15% 0% 15%;
 }
+  /* Extra small devices (phones, 600px and down) */
+  @media only screen and (max-width: 600px) {
+    .App{
+      margin: 1% 8% 0% 8%;
+    }
+  }
+  
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    .App{
+      margin: 1% 8% 0% 8%;
+    }
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    .App{
+      margin: 1% 8% 0% 8%;
+    }
+  }
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    .App{
+      margin: 1% 8% 0% 8%;
+    }
+  }
+  
+  @media only screen and (min-width: 1399px) {
+    .App{
+      margin: 3% 15% 0% 15%;
+    }
+  }
