--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,5 +1,139 @@
 /* Navbar */
 .navbar{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo-wrapper > h2{
+  color: #F03A17;
+}
+.nav-items .ul-items{
+  list-style: none;
+}
+.nav-items .ul-items > li{
+  display: inline-block;
+  margin-left: 50px;
+}
+.nav-items .ul-items > li > a{
+  color: #F0F8FF;
+  text-decoration: none;
+  font-size: 12px;
+  transition: all 0.3s ease 0s;
+}
+.nav-items .ul-items > li > a:hover{
+  border-radius: 0.75rem;
+  padding: 10px 20px 10px 20px;
+  border: 2px solid #ffffff;
+  background-color: #F03A17;
+  color: #ffffff;
+}
+.contact-btn{
+  color: #F0F8FF;
+  font-size: 12px;
+  text-decoration: none;
+  border: 2px solid #F0F8FF;
+  border-radius: 0.75rem;
+  padding:10px 20px 10px 20px;
+  transition: all 0.3s ease 0s;
+}
+.contact-btn:hover{
+  background-color: #F03A17;
+  color: #ffffff;
+}
+  
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .nav-items{
+    display: none;
+  }
+  .contact-btn-wrapper{
+    display: none;
+  }
+  .mobile-navigation{
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 75px;
+    left: 0;
+    bottom:0;
+    background-color: #28292A;
+  }
+  .ul-items{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    flex-wrap: wrap;
+    padding: 0;
+  }
+  .ul-items > div {
+    flex: 0 25%;
+    text-align: center;
+  }
+  .ul-items > div > li{
+    display: inline-block;
+  }
+  .ul-items > div > li > a{
+    color: #F0F8FF;
+    text-decoration: none;
+    font-size: 10px;
+    transition: all 0.3s ease 0s;
+  }
+  .ul-items > div > li > a:active{
+    border-bottom: 2px solid #F03A17;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .nav-items{
+    display: none;
+  }
+  .contact-btn-wrapper{
+    display: none;
+  }
+  .mobile-navigation{
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 75px;
+    left: 0;
+    bottom:0;
+    background-color: #28292A;
+  }
+  .ul-items{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    flex-wrap: wrap;
+    padding: 0;
+  }
+  .ul-items > div {
+    flex: 0 25%;
+    text-align: center;
+  }
+  .ul-items > div > li{
+    display: inline-block;
+  }
+  .ul-items > div > li > a{
+    color: #F0F8FF;
+    text-decoration: none;
+    font-size: 10px;
+    transition: all 0.3s ease 0s;
+  }
+  .ul-items > div > li > a:active{
+    border-bottom: 2px solid #F03A17;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .mobile-navigation{
+    display: none;
+  }
+  .navbar{
     display:flex;
     justify-content: space-between;
     align-items: center;
@@ -40,3 +174,99 @@
     background-color: #F03A17;
     color: #ffffff;
   }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .mobile-navigation{
+    display: none;
+  }
+  .navbar{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .logo-wrapper > h2{
+    color: #F03A17;
+  }
+  .nav-items .ul-items{
+    list-style: none;
+  }
+  .nav-items .ul-items > li{
+    display: inline-block;
+    margin-left: 50px;
+  }
+  .nav-items .ul-items > li > a{
+    color: #F0F8FF;
+    text-decoration: none;
+    font-size: 12px;
+    transition: all 0.3s ease 0s;
+  }
+  .nav-items .ul-items > li > a:hover{
+    border-radius: 0.75rem;
+    padding: 10px 20px 10px 20px;
+    border: 2px solid #ffffff;
+    background-color: #F03A17;
+    color: #ffffff;
+  }
+  .contact-btn{
+    color: #F0F8FF;
+    font-size: 12px;
+    text-decoration: none;
+    border: 2px solid #F0F8FF;
+    border-radius: 0.75rem;
+    padding:10px 20px 10px 20px;
+    transition: all 0.3s ease 0s;
+  }
+  .contact-btn:hover{
+    background-color: #F03A17;
+    color: #ffffff;
+  }
+}
+
+@media only screen and (min-width: 1399px) {
+  .mobile-navigation{
+    display: none;
+  }
+  .navbar{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .logo-wrapper > h2{
+    color: #F03A17;
+  }
+  .nav-items .ul-items{
+    list-style: none;
+  }
+  .nav-items .ul-items > li{
+    display: inline-block;
+    margin-left: 50px;
+  }
+  .nav-items .ul-items > li > a{
+    color: #F0F8FF;
+    text-decoration: none;
+    font-size: 12px;
+    transition: all 0.3s ease 0s;
+  }
+  .nav-items .ul-items > li > a:hover{
+    border-radius: 0.75rem;
+    padding: 10px 20px 10px 20px;
+    border: 2px solid #ffffff;
+    background-color: #F03A17;
+    color: #ffffff;
+  }
+  .contact-btn{
+    color: #F0F8FF;
+    font-size: 12px;
+    text-decoration: none;
+    border: 2px solid #F0F8FF;
+    border-radius: 0.75rem;
+    padding:10px 20px 10px 20px;
+    transition: all 0.3s ease 0s;
+  }
+  .contact-btn:hover{
+    background-color: #F03A17;
+    color: #ffffff;
+  }
+}
