--- a/src/css/trend_movies.css
+++ b/src/css/trend_movies.css
@@ -64,3 +64,26 @@
   max-width: 100%;
   border-radius: 5px;
 }
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  
+}
+
+@media only screen and (min-width: 1399px) {
+  
+}
