--- a/src/css/movie_details.css
+++ b/src/css/movie_details.css
@@ -11,6 +11,7 @@
   }
   .selected-movie-img > img{
     border-radius: 10px;
+    width: 100%;
   }
   .movie-caption-wrapper{
     margin-top: -40px;
@@ -46,26 +47,24 @@
     padding: 5px 10px;
     border-radius: 10px;
   }
-  #downloads {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  #downloads td, #downloads th {
-    border: 1px solid #828283;
-    padding: 20px;
-  }
-  #downloads th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: transparent;
-    color: white;
-  }
-  .download-links{
+  .download-text{
     color: #828283;
   }
-  .watch-movie{
+  .download-links{
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+  }
+  .download-wrapper{
+    color: #fff;
+    background-color: rgb(130, 130, 131, 0.2);
+    padding: 10px 0px 30px 15px;
+    margin: 5px 10px 0px 0px;
+    border-radius:5px;
+    font-size: 12px;
+  }
+  .download-movie{
+    margin-top: 30px;
     background-color: #F03A17;
     color: #ffffff;
     text-decoration: none;
@@ -78,7 +77,269 @@
     cursor: pointer;
     transition: 0.3s;
   }
-  .watch-movie:hover{
+  .download-movie:hover{
+    color: #F03A17;
+    border: 1px solid #F03A17;
+    background-color: transparent;
+  }
+  .trailer-err > a{
+    color: #F03A17;
+    text-decoration: none;
+  }
+  .trailer-wrapper{
+    color: #fff;
+    margin-top: 5%;
+  }
+  .m-name{
+    color: #F03A17;
+  }
+  .current-genre-recommendation-wrapper{
+    margin-top: 5%;
+    color: #fff;
+    font-size: 12px;
+  }
+  .current-genre-recommendation-wrapper > h1 >span{
+    color: #F03A17;
+  }
+  .similar-movies{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+
+
+  /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .movie-details-wrapper{
+    margin: 50px 0px 100px 0px;
+  }
+  .movie-details{
+    display: block;
+    justify-content: space-arround;
+  }
+  .selected-movie-img > img{
+    border-radius: 10px;
+    width: 100%;
+  }
+  .movie-caption-wrapper{
+    margin-top: -20px;
+    margin-left: 0px;
+  }
+  .title > h3{
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 30px;
+  }
+  .movie-overview-flex{
+    width: 100%;
+    display: block;
+    justify-content: space-between;
+  }
+  .genres-wrapper > div {
+    margin-bottom: 20px;
+  }
+  .genres-wrapper > div > span{
+    margin-right: 10px;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    border-radius: 10px;
+  }
+  .current-genre-recommendation-wrapper{
+    margin-top: 5%;
+    color: #fff;
+  }
+  .current-genre-recommendation-wrapper > h1 >span{
+    color: #F03A17;
+  }
+  .similar-movies{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .similar-movies > div {
+    margin-top: 20px;
+    flex: 0 48%;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .movie-details-wrapper{
+    margin: 50px 0px 100px 0px;
+  }
+  .movie-details{
+    display: block;
+    justify-content: space-arround;
+  }
+  .selected-movie-img > img{
+    border-radius: 10px;
+    width: 100%;
+  }
+  .movie-caption-wrapper{
+    margin-top: -20px;
+    margin-left: 0px;
+  }
+  .title > h3{
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 30px;
+  }
+  .movie-overview-flex{
+    width: 100%;
+    display: block;
+    justify-content: space-between;
+  }
+  .genres-wrapper > div {
+    margin-bottom: 20px;
+  }
+  .genres-wrapper > div > span{
+    margin-right: 10px;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    border-radius: 10px;
+  }
+  .current-genre-recommendation-wrapper{
+    margin-top: 5%;
+    color: #fff;
+  }
+  .current-genre-recommendation-wrapper > h1 >span{
+    color: #F03A17;
+  }
+  .similar-movies{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .similar-movies > div {
+    margin-top: 20px;
+    flex: 0 48%;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .movie-details-wrapper{
+    margin: 50px 0px 100px 0px;
+  }
+  .movie-details{
+    display: block;
+    justify-content: space-arround;
+  }
+  .selected-movie-img > img{
+    border-radius: 10px;
+    width: 100%;
+  }
+  .movie-caption-wrapper{
+    margin-top: -20px;
+    margin-left: 0px;
+  }
+  .title > h3{
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 30px;
+  }
+  .movie-overview-flex{
+    width: 100%;
+    display: block;
+    justify-content: space-between;
+  }
+  .genres-wrapper > div {
+    margin-bottom: 20px;
+  }
+  .genres-wrapper > div > span{
+    margin-right: 10px;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    border-radius: 10px;
+  }
+  .current-genre-recommendation-wrapper{
+    margin-top: 5%;
+    color: #fff;
+  }
+  .current-genre-recommendation-wrapper > h1 >span{
+    color: #F03A17;
+  }
+  .similar-movies{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .similar-movies > div {
+    margin-top: 20px;
+    flex: 0 24%;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .mt-10{
+    margin-top: 10%;
+  }
+  .movie-details-wrapper{
+    margin: 100px 0px;
+  }
+  .movie-details{
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .selected-movie-img > img{
+    border-radius: 10px;
+    width: 100%;
+  }
+  .movie-caption-wrapper{
+    margin-top: -40px;
+    margin-left: 50px;
+  }
+  .title > h3{
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 40px;
+  }
+  .selected-movie-overview > .movie-detail{
+    color: #828283;
+  }
+  .selected-movie-overview > .movie-detail-value{
+    color: #fff;
+  }
+  .movie-overview-flex{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .movie-credits > h1{
+    color: #fff;
+  }
+  .genres-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .genres-wrapper > div > span{
+    margin-right: 10px;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    border-radius: 10px;
+  }
+  .download-links{
+    color: #828283;
+  }
+  .download-movie{
+    background-color: #F03A17;
+    color: #ffffff;
+    text-decoration: none;
+    outline: none;
+    border:none;
+    border-radius:10px;
+    width: 50%;
+    padding: 10px 20px;
+    margin-right: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  .download-movie:hover{
     color: #F03A17;
     border: 1px solid #F03A17;
     background-color: transparent;
@@ -105,24 +366,9 @@
     display: flex;
     justify-content: space-between;
   }
-  
-
-
-  /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  
+  .similar-movies > div {
+    flex: 0 24%;
+  }
 }
 
 @media only screen and (min-width: 1399px) {
