--- a/src/css/movie_details.css
+++ b/src/css/movie_details.css
@@ -11,7 +11,7 @@
   }
   .selected-movie-img > img{
     border-radius: 10px;
-    width: 100%;
+    max-width: 100%;
   }
   .movie-caption-wrapper{
     margin-top: -40px;
@@ -367,7 +367,7 @@
     justify-content: space-between;
   }
   .similar-movies > div {
-    flex: 0 24%;
+    flex: 0 25%;
   }
 }
 
